added doctest to repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ext/enoki"]
 	path = ext/enoki
 	url = https://github.com/mitsuba-renderer/enoki
+[submodule "ext/doctest"]
+	path = ext/doctest
+	url = https://github.com/onqtam/doctest.git
