--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,43 +58,8 @@ target_include_directories(sdmm INTERFACE include ext/enoki/include)
 target_link_libraries(sdmm INTERFACE ${CONAN_LIBS})
 target_compile_features(sdmm INTERFACE cxx_std_17)
 
-# Test executable.
-add_executable(
-    tests
+add_subdirectory(tests)
 
-    tests/tests.cpp
-    tests/linalg.cpp
-    tests/distributions.cpp
-    tests/matrix.cpp
-    tests/spaces.cpp
-    tests/comparison.cpp
-)
-target_compile_definitions(tests PRIVATE COMPARISON=1)
-target_compile_features(tests PRIVATE cxx_std_17)
-target_include_directories(tests PRIVATE tests)
-target_link_libraries(tests PRIVATE sdmm jmm jmm_interface ${CONAN_LIBS})
+add_subdirectory(benchmarks)
 
-# Benchmarks executable.
-add_executable(
-    benchmarks
-
-    benchmarks/distributions.cpp
-    benchmarks/em.cpp
-    benchmarks/sampling.cpp
-)
-target_compile_definitions(benchmarks PRIVATE COMPARISON=0)
-target_compile_features(benchmarks PRIVATE cxx_std_17)
-target_include_directories(benchmarks PRIVATE benchmark::benchmark)
-target_link_libraries(benchmarks PRIVATE sdmm ${CONAN_LIBS} jmm jmm_interface)
-
-# find_package(OpenMP)
-# 
-
-# OpenMP::OpenMP_CXX
-# Boost::system
-# Boost::filesystem
-# Boost::thread
-# Boost::iostreams
-# Boost::serialization
-# Boost::program_options
-
+add_subdirectory(python)
