--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     set(MATH_FLAGS "-funsafe-math-optimizations -fno-math-errno  ")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -g ${WARNING_FLAGS} ${MATH_FLAGS} -stdlib=libc++ -march=native")
 elseif (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
-    set(WARNING_FLAGS "-ftrack-macro-expansion=0 -Wall -Wextra -Wfloat-conversion -Wno-deprecated-declarations")
+    set(WARNING_FLAGS "-ftrack-macro-expansion=0 -Wall -Wextra -Wfloat-conversion -Wno-deprecated-declarations -Wno-misleading-indentation")
     set(MATH_FLAGS "-funsafe-math-optimizations -fno-math-errno -fno-signaling-nans -fno-rounding-math")
     set(SANITIZER_FLAGS "")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O1 -g ${WARNING_FLAGS} ${MATH_FLAGS} ${SANITIZER_FLAGS}")
