--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -16,4 +16,4 @@ target_compile_features(benchmarks PRIVATE cxx_std_17)
 
 target_include_directories(benchmarks PRIVATE benchmark::benchmark)
 
-target_link_libraries(benchmarks PRIVATE sdmm ${CONAN_LIBS} jmm jmm_interface)
+target_link_libraries(benchmarks PRIVATE sdmm ${CONAN_LIBS})
